# cpp-HAL-baremetal

./: .gitmodules  CMakeLists.txt
Src/Hardware/: Hardware.cpp  Hardware.hpp  stm32f1xx_hal_conf.h
Src/Startup/: main.cpp  stm32f031x6.ld  vector_table.cpp
Src/Tasks/: AhrsInterface.cpp  AhrsInterface.hpp  CanInterface.cpp  CanInterface.hpp  FreeRTOSConfig.h  GpsInterface.cpp  GpsInterface.hpp  LedDebug.cpp  LedDebug.hpp  TaskManager.cpp  TaskManager.hpp
Src/startup/: main.cpp  vector_table.cpp
cmake/: arm-none-eabi.cmake
openocd/: openocd.cfg
src/: main.cpp
src/startup/: startup.cpp
